# meetscribe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
meet/: audio.py  cli.py  gui.py  label.py  summarize.py  sync.py  transcribe.py  voiceprint.py
meet/prompts/: summarize_system.md  summarize_user.md  summarize_user_lang.md
tests/: test_capture.py  test_transcribe.py
