[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetscribe-offline"
version = "0.3.0"
description = "Fully local meeting transcription with speaker diarization, AI summaries, and PDF output"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pretyflaco"}]
keywords = [
    "meeting",
    "transcription",
    "whisper",
    "whisperx",
    "diarization",
    "speaker-diarization",
    "pyannote",
    "ollama",
    "local-ai",
    "audio",
    "recording",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "whisperx>=3.8",
    "click>=8.0",
    "reportlab>=4.0",
    "requests>=2.28",
]

[project.scripts]
meet = "meet.cli:main"

[project.urls]
Homepage = "https://github.com/pretyflaco/meetscribe"
Repository = "https://github.com/pretyflaco/meetscribe"
Issues = "https://github.com/pretyflaco/meetscribe/issues"

[tool.setuptools.package-data]
meet = ["prompts/*.md"]

[project.optional-dependencies]
rtl = ["arabic-reshaper>=3.0", "python-bidi>=0.4"]
dev = ["ruff", "pytest"]
